--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,22 +1,26 @@
 <resources>
     <!---->
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="@style/Theme.Design.NoActionBar">
+    <!--<style name="AppTheme" parent="@style/Theme.Design.NoActionBar">-->
+    <style name="AppTheme" parent="@style/Theme.Design.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <!--<item name="colorPrimary">@color/colorPrimary</item>-->
+        <!--<item name="colorPrimaryDark">@color/colorPrimaryDark</item>-->
+        <!--<item name="colorAccent">@color/colorAccent</item>-->
     </style>
 
 
-    <style name="AppTheme.TransNav" parent="AppTheme" />
+    <style name="AppTheme.TransNav" parent="AppTheme"
+
+        />
     <style name="CustomTitleTextAppearance">
         <item name="android:textSize">23sp</item>
         <item name="android:textStyle">bold</item>
+
     </style>
 
-    <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
+    <!--<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />-->
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <!--<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />-->
 
 </resources>
